test/classes/dinan/circular_init_broken2.good
circular_init_broken2.chpl:2: error: 'b' used before defined
circular_init_broken2.chpl:3: note: defined here
